@@ -10,55 +10,55 @@
 namespace urbi
 {
   typedef CRITICAL_SECTION Lock;
-  inline void initLock(Lock &l)
+  inline void initLock(Lock& l)
   {
     InitializeCriticalSection(&l);
   }
 
-  inline void lockLock(Lock &l)
+  inline void lockLock(Lock& l)
   {
     EnterCriticalSection(&l);
   }
 
-  inline void lockUnlock(Lock &l)
+  inline void lockUnlock(Lock& l)
   {
     LeaveCriticalSection(&l);
   }
 
-  inline void deleteLock(Lock &l)
+  inline void deleteLock(Lock& l)
   {
     DeleteCriticalSection(&l);
   }
 
-  inline bool lockTryLock(Lock &l)
+  inline bool lockTryLock(Lock& l)
   {
     return TryEnterCriticalSection(&l);
   }
 }
 
-# elif defined URBI_ENV_AIBO && URBI_ENV_AIBO
+# elif defined URBI_ENV_AIBO& & URBI_ENV_AIBO
 
 namespace urbi
 {
 
   typedef int Lock;
-  inline void initLock(Lock &l)
+  inline void initLock(Lock&)
   {
   }
 
-  inline void lockLock(Lock &l)
+  inline void lockLock(Lock&)
   {
   }
 
-  inline void lockUnlock(Lock &l)
+  inline void lockUnlock(Lock&)
   {
   }
 
-  inline void deleteLock(Lock &l)
+  inline void deleteLock(Lock&)
   {
   }
 
-  inline bool lockTryLock(Lock &l)
+  inline bool lockTryLock(Lock&)
   {
     return true;
   }
@@ -76,7 +76,7 @@ namespace urbi
 {
   typedef pthread_mutex_t Lock;
 
-  inline void initLock(Lock &l)
+  inline void initLock(Lock& l)
   {
     pthread_mutexattr_t ma;
     pthread_mutexattr_init(&ma);
@@ -97,22 +97,22 @@ namespace urbi
     pthread_mutex_init(&l,&ma);
   }
 
-  inline void lockLock(Lock &l)
+  inline void lockLock(Lock& l)
   {
     pthread_mutex_lock(&l);
   }
 
-  inline void lockUnlock(Lock &l)
+  inline void lockUnlock(Lock& l)
   {
     pthread_mutex_unlock(&l);
   }
 
-  inline void deleteLock(Lock &l)
+  inline void deleteLock(Lock& l)
   {
     pthread_mutex_destroy(&l);
   }
 
-  inline bool lockTryLock(Lock &l)
+  inline bool lockTryLock(Lock& l)
   {
     return !pthread_mutex_trylock(&l);
   }
@@ -126,11 +126,11 @@ namespace urbi
   class Lockable
   {
   public:
-    Lockable() { initLock(_lock);}
-    ~Lockable() { deleteLock(_lock);}
-    void lock() {lockLock(_lock);}
-    void unlock() {lockUnlock(_lock);}
-    bool tryLock() {return lockTryLock(_lock);}
+    Lockable()     { initLock(_lock);		}
+    ~Lockable()    { deleteLock(_lock);		}
+    void lock()    { lockLock(_lock);		}
+    void unlock()  { lockUnlock(_lock);		}
+    bool tryLock() { return lockTryLock(_lock);	}
   private:
     Lock _lock;
   };
@@ -138,12 +138,19 @@ namespace urbi
   class BlockLock
   {
   public:
-    BlockLock(Lockable& l): l(l) {l.lock();}
-    BlockLock(Lockable* l): l(*l)
+    BlockLock(Lockable& l)
+      : l(l)
+    {
+      l.lock();
+    }
+
+    BlockLock(Lockable* l)
+      : l(*l)
     {
       //std::cerr <<"lock "<<l<<std::endl;
       l->lock();
     }
+
     ~BlockLock()
     {
       //std::cerr <<"unlock "<<&l<<std::endl;
@@ -151,7 +158,7 @@ namespace urbi
     }
 
   private:
-    Lockable &l;
+    Lockable& l;
   };
 
 }
